# feature-engineering-aide

./: .flake8  .gitignore  Dockerfile  README.md  collect_experiment_results.sh  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  run_at_risk_automl_docker_experiment.sh  run_at_risk_feature_quality_docker_experiment.sh  run_at_risk_no_automl_docker_experiment.sh  run_automl_docker_experiment.sh  run_docker_experiment.sh  run_feature_quality_docker_experiment.sh
docs/: auto-sklearn.md  write-up.md
experiment_config/: at_risk.toml  at_risk2.toml  automl_discretizer.py  experiment.py  feature_quality_experiment.py  make_experiment.py  mam1000.toml  run_automl_experiments.py  run_experiments.py  settings.py  utils.py
experiment_runner/: experiment.py  feature_quality_experiment.py  make_experiment.py  run_automl_experiments.py  run_experiments.py  utils.py
experiments/: at_risk.toml  csc1016.toml  mam1000.toml
feature_engineer/: base_automl_experiment.py  experiment_cli.py  experiment_template.py  run_at_risk_automl_experiment.py  run_at_risk_automl_experiments.py  run_at_risk_feature_quality_experiment.py  run_at_risk_no_automl_experiment.py  run_automl_experiment.py  run_automl_experiments.py  run_experiments.py  run_feature_quality_experiment.py
feature_engineer/experiment_config/: experiment.py  make_experiment.py
feature_engineer/experiment_runner/: experiment.py  experiment_runner.py  run_experiments.py  (+7 more)
nudelman_experiment/: decision_tree.ipynb  naive_bayes.ipynb  nudelman_experiment.ipynb  random_forest.ipynb
(+3 files in other folders)
