[tool.poetry]
name = "feature-engineering-aide"
version = "0.0.1"
description = "An automated feature engineering aide that uses AutoML to evaluate the selected feature performance."
authors = ["Jethro Muller"]

[tool.poetry.dependencies]
python = "^3.7"
auto-sklearn = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
